Filtrando pontos turísticos por diferentes tipos de culinária

--- a/teste.ipynb
+++ b/teste.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 89,
    "id": "ab450d15",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 90,
    "id": "a076016e",
    "metadata": {},
    "outputs": [],
@@ -24,17 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "34398657",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 91,
    "id": "9776a5ec",
    "metadata": {},
    "outputs": [],
@@ -45,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "ec5cd3ff",
    "metadata": {},
    "outputs": [
@@ -60,7 +50,19 @@
       "Pisa            1      1   Pizza, Pasta, Gelato    1\n",
       "Rome            1      1   Pizza, Pasta, Gelato    1\n",
       "Venice          1      1   Pizza, Pasta, Gelato    1\n",
-      "Verona          1      1  Pizza, Pasta, Risotto    1\n"
+      "Verona          1      1  Pizza, Pasta, Risotto    1\n",
+      "                             count unique                    top freq\n",
+      "Destination                                                          \n",
+      "Casino Square                    1      1  Mediterranean cuisine    1\n",
+      "Exotic Garden                    1      1  Mediterranean cuisine    1\n",
+      "Grimaldi Forum                   1      1  Mediterranean cuisine    1\n",
+      "Japanese Garden                  1      1  Mediterranean cuisine    1\n",
+      "Larvotto Beach                   1      1  Mediterranean cuisine    1\n",
+      "Monaco-Ville                     1      1  Mediterranean cuisine    1\n",
+      "Monte Carlo                      1      1  Mediterranean cuisine    1\n",
+      "Oceanographic Museum             1      1  Mediterranean cuisine    1\n",
+      "Rainier III Botanical Garden     1      1  Mediterranean cuisine    1\n",
+      "Saint-Martin Gardens             1      1  Mediterranean cuisine    1\n"
      ]
     }
    ],
@@ -68,7 +70,32 @@
     "ident_Pizza= df[df['Famous Foods'].str.contains('Pizza')]\n",
     "result_pizza = ident_Pizza.groupby('Destination')['Famous Foods'].describe()\n",
     "print(result_pizza)\n",
+    "\n",
+    "ident_medit = df[df['Famous Foods'].str.contains('Mediterranean cuisine')]\n",
+    "result_medit = ident_medit.groupby('Destination')['Famous Foods'].describe()\n",
+    "print(result_medit)\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "690cfdf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ident_fish = df[df['Famous Foods'].str.contains('Fish')]\n",
+    "result_fish = ident_fish.groupby('Destination')['Famous Foods'].describe()\n",
+    "ident_seafood = df[df['Famous Foods'].str.contains('Seafood')]\n",
+    "result_seafood = ident_seafood.groupby('Destination')['Famous Foods'].describe()\n",
+    "seafood_list = []\n",
+    "seafood_list.append(result_fish)\n",
+    "seafood_list.append(result_seafood)\n",
+    "\n",
+    "final_list = pd.concat(seafood_list, ignore_index = True)\n",
+    "\n",
+    "##print(final_list)"
    ]
   }
  ],
