--- a/teste.ipynb
+++ b/teste.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "id": "ab450d15",
    "metadata": {},
    "outputs": [],
@@ -12,30 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "a076016e",
    "metadata": {},
    "outputs": [],
    "source": [
     "caminho = 'data\\\\destinations.csv'\n",
-    "df = pd.read_csv(caminho, sep = ',', encoding = 'ISO-8859-1')\n",
-    "##df.head()"
+    "df = pd.read_csv(caminho, sep = ',', encoding = 'ISO-8859-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "9776a5ec",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "##resultado = df.iloc[:20].groupby('Destination')[ 'Famous Foods'].describe()\n",
-    "##print(resultado)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "id": "ec5cd3ff",
    "metadata": {},
    "outputs": [
@@ -80,10 +76,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "id": "690cfdf8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   count unique                                          top freq\n",
+      "0      1      1                             Fish, Lamb, Skyr    1\n",
+      "1      1      1                      Fish, Reindeer, Brunost    1\n",
+      "2      1      1                             Fish, Lamb, Skyr    1\n",
+      "3      1      1  Fish and chips, Sunday roast, Afternoon tea    1\n",
+      "4      1      1                      Fish, Reindeer, Brunost    1\n",
+      "5      1      1                      Fish, Reindeer, Brunost    1\n",
+      "6      1      1                             Fish, Lamb, Skyr    1\n",
+      "7      1      1                      Fish, Reindeer, Brunost    1\n",
+      "8      1      1                      Fish, Reindeer, Brunost    1\n",
+      "9      1      1                             Fish, Lamb, Skyr    1\n",
+      "10     1      1  Fish and chips, Sunday roast, Afternoon tea    1\n",
+      "11     1      1  Fish and chips, Sunday roast, Afternoon tea    1\n",
+      "12     1      1                      Fish, Reindeer, Brunost    1\n",
+      "13     1      1  Fish and chips, Sunday roast, Afternoon tea    1\n",
+      "14     1      1  Fish and chips, Sunday roast, Afternoon tea    1\n",
+      "15     1      1                      Fish, Reindeer, Brunost    1\n",
+      "16     1      1                      Fish, Reindeer, Brunost    1\n",
+      "17     1      1                             Fish, Lamb, Skyr    1\n",
+      "18     1      1                             Fish, Lamb, Skyr    1\n",
+      "19     1      1                             Fish, Lamb, Skyr    1\n",
+      "20     1      1                             Fish, Lamb, Skyr    1\n",
+      "21     1      1                      Fish, Reindeer, Brunost    1\n",
+      "22     1      1  Fish and chips, Sunday roast, Afternoon tea    1\n",
+      "23     1      1  Fish and chips, Sunday roast, Afternoon tea    1\n",
+      "24     1      1                      Fish, Reindeer, Brunost    1\n",
+      "25     1      1                             Fish, Lamb, Skyr    1\n",
+      "26     1      1                             Fish, Lamb, Skyr    1\n",
+      "27     1      1  Fish and chips, Sunday roast, Afternoon tea    1\n",
+      "28     1      1     Seafood, Pastel de nata, Pastel de Belm    1\n",
+      "29     1      1            Seafood, Sardinha, Pastel de nata    1\n",
+      "30     1      1                          Seafood, Limoncello    1\n",
+      "31     1      1            Seafood, Bacalhau, Pastel de nata    1\n",
+      "32     1      1            Seafood, Bacalhau, Pastel de nata    1\n",
+      "33     1      1                               Seafood, Pesto    1\n",
+      "34     1      1            Seafood, Bacalhau, Pastel de nata    1\n",
+      "35     1      1               Seafood, Greek salad, Moussaka    1\n",
+      "36     1      1               Seafood, Greek salad, Moussaka    1\n",
+      "37     1      1            Seafood, Bacalhau, Pastel de nata    1\n",
+      "38     1      1                               Seafood, Pasta    1\n",
+      "39     1      1                              Seafood, Crepes    1\n",
+      "40     1      1               Seafood, Greek salad, Moussaka    1\n",
+      "41     1      1               Seafood, Greek salad, Moussaka    1\n",
+      "42     1      1               Seafood, Greek salad, Moussaka    1\n",
+      "43     1      1               Seafood, Greek salad, Moussaka    1\n",
+      "44     1      1     Seafood, Pastel de nata, Pastel de Belm    1\n"
+     ]
+    }
+   ],
    "source": [
     "ident_fish = df[df['Famous Foods'].str.contains('Fish')]\n",
     "result_fish = ident_fish.groupby('Destination')['Famous Foods'].describe()\n",
@@ -95,7 +144,7 @@
     "\n",
     "final_list = pd.concat(seafood_list, ignore_index = True)\n",
     "\n",
-    "##print(final_list)"
+    "print(final_list)"
    ]
   }
  ],
