--- a/latitude_destinos.ipynb
+++ b/latitude_destinos.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "ef70083f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import display, Markdown"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "af18d8af",
    "metadata": {},
    "outputs": [],
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "c73693e9",
    "metadata": {},
    "outputs": [],
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "ab5d28f5",
    "metadata": {},
    "outputs": [
@@ -47,9 +48,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Thiago\\AppData\\Local\\Temp\\ipykernel_27516\\620228427.py:8: UserWarning: Glyph 145 (\\x91) missing from font(s) DejaVu Sans.\n",
+      "C:\\Users\\Thiago\\AppData\\Local\\Temp\\ipykernel_27516\\4062240271.py:8: UserWarning: Glyph 145 (\\x91) missing from font(s) DejaVu Sans.\n",
       "  plt.tight_layout()\n",
-      "C:\\Users\\Thiago\\AppData\\Local\\Temp\\ipykernel_27516\\620228427.py:8: UserWarning: Glyph 148 (\\x94) missing from font(s) DejaVu Sans.\n",
+      "C:\\Users\\Thiago\\AppData\\Local\\Temp\\ipykernel_27516\\4062240271.py:8: UserWarning: Glyph 148 (\\x94) missing from font(s) DejaVu Sans.\n",
       "  plt.tight_layout()\n",
       "c:\\Users\\Thiago\\vscode\\UNIFEI2025\\ecox14\\Projeto1\\venv\\Lib\\site-packages\\IPython\\core\\pylabtools.py:170: UserWarning: Glyph 145 (\\x91) missing from font(s) DejaVu Sans.\n",
       "  fig.canvas.print_figure(bytes_io, **kw)\n",
@@ -66,6 +67,18 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "O gráfico de barras apresenta os oito destinos turísticos com maior latitude registrados no dataset. "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -77,7 +90,8 @@
     "plt.gca().invert_yaxis()  # inverter para o mais ao norte aparecer no topo\n",
     "plt.grid(axis='x', linestyle='--', alpha=0.7)\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "display(Markdown(\"O gráfico de barras apresenta os oito destinos turísticos com maior latitude registrados no dataset. \"))\n"
    ]
   }
  ],
