Ajustes de código

--- a/comidas_europa.ipynb
+++ b/comidas_europa.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "ab450d15",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import display, Markdown"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "a076016e",
    "metadata": {},
    "outputs": [],
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "ec5cd3ff",
    "metadata": {},
    "outputs": [],
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "690cfdf8",
    "metadata": {},
    "outputs": [],
@@ -66,41 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c117bf60",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "5302b872",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/markdown": [
+       "O gráfico de pizza apresenta a distribuição de destinos turísticos na Europa conforme a presença de comidas típicas relacionadas a três categorias populares: pizza, culinária mediterrânea e frutos do mar.  Observa-se que esses tipos de culinária se destacam entre os principais atrativos gastronômicos europeus. Essa visualização reforça a forte influência da gastronomia italiana e mediterrânea sobre a cultura turística do continente."
+      ],
       "text/plain": [
-       "([<matplotlib.patches.Wedge at 0x1e16ca28a10>,\n",
-       "  <matplotlib.patches.Wedge at 0x1e16ca9b990>,\n",
-       "  <matplotlib.patches.Wedge at 0x1e16caa6650>,\n",
-       "  <matplotlib.patches.Wedge at 0x1e16cab1390>,\n",
-       "  <matplotlib.patches.Wedge at 0x1e16cab3ed0>],\n",
-       " [Text(-0.2437161149205626, 0.9492114913590265, 'Pizza'),\n",
-       "  Text(-0.7805992618719851, 0.5925072087029087, 'Culinaria mediterranea'),\n",
-       "  Text(0.08200448665231128, -0.9765629852543517, 'Peixes e Frutos do Mar'),\n",
-       "  Text(0.827441655023195, 0.5251098052145629, 'Paella'),\n",
-       "  Text(0.3986028989566901, 0.8952741082726133, 'Baklava')],\n",
-       " [Text(-0.14424014964686355, 0.5617782295798319, '8.0%'),\n",
-       "  Text(-0.46198731825076667, 0.35066753168131326, '13.3%'),\n",
-       "  Text(0.04853326761055156, -0.5779658484158408, '60.0%'),\n",
-       "  Text(0.4897103672586256, 0.31077927247392495, '5.3%'),\n",
-       "  Text(0.23590783815804103, 0.5298561048960364, '13.3%')])"
+       "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -124,12 +105,13 @@
     "food_plot = [pizza,medit,seafood_fish, paella,baklava]\n",
     "\n",
     "plt.pie(food_plot,labels = comidas, startangle=90,\n",
-    "shadow=True, explode=(0.1,0.1,0.1,0.1,0.1), radius=0.8, autopct='%1.1f%%')"
+    "shadow=True, explode=(0.1,0.1,0.1,0.1,0.1), radius=0.8, autopct='%1.1f%%')\n",
+    "display(Markdown(\"O gráfico de pizza apresenta a distribuição de destinos turísticos na Europa conforme a presença de comidas típicas relacionadas a três categorias populares: pizza, culinária mediterrânea e frutos do mar.  Observa-se que esses tipos de culinária se destacam entre os principais atrativos gastronômicos europeus. Essa visualização reforça a forte influência da gastronomia italiana e mediterrânea sobre a cultura turística do continente.\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "65ce96d2",
    "metadata": {},
    "outputs": [
@@ -137,7 +119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Thiago\\AppData\\Local\\Temp\\ipykernel_13100\\3631643036.py:1: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Thiago\\AppData\\Local\\Temp\\ipykernel_13100\\2906156876.py:1: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_rest = pd.read_csv('data\\\\tripadvisor_european_restaurants.csv')\n"
      ]
     },
@@ -150,18 +132,54 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "O gráfico apresenta a relação entre a **avaliação média dos restaurantes** (barras azuis, eixo esquerdo) e a **quantidade média de horas abertas por semana** (linha vermelha, eixo direito) nos oito países europeus com maior número de estabelecimentos registrados.  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "A análise mostra que países como **Grécia** e **Portugal** destacam-se com elevadas avaliações médias, enquanto o tempo médio de funcionamento varia significativamente entre os países."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Essa visualização permite observar que **maior tempo de funcionamento não necessariamente implica melhores avaliações**, sugerindo que fatores como qualidade do serviço e tipo de culinária influenciam mais diretamente a satisfação dos clientes."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "df_rest = pd.read_csv('data\\\\tripadvisor_european_restaurants.csv')\n",
     "\n",
-    "# Visualizar as colunas para confirmar os nomes\n",
+    "\n",
     "df_rest = df_rest.dropna(subset=['avg_rating', 'open_hours_per_week', 'country'])\n",
     "\n",
-    "# Agrupar por país e calcular médias\n",
+    "\n",
     "df_country = df_rest.groupby('country')[['avg_rating', 'open_hours_per_week']].mean().reset_index()\n",
     "\n",
-    "# Selecionar os 8 países com maior número de restaurantes (para não poluir o gráfico)\n",
+    "\n",
     "top_countries = df_rest['country'].value_counts().nlargest(8).index\n",
     "df_country = df_country[df_country['country'].isin(top_countries)]\n",
     "\n",
@@ -182,10 +200,13 @@
     "ax2.set_ylabel('Horas abertas por semana', color=color)\n",
     "ax2.tick_params(axis='y', labelcolor=color)\n",
     "\n",
-    "# Título e layout\n",
+    "\n",
     "plt.title('Comparação entre avaliação média e horas abertas por país')\n",
     "fig.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "display(Markdown(\"O gráfico apresenta a relação entre a **avaliação média dos restaurantes** (barras azuis, eixo esquerdo) e a **quantidade média de horas abertas por semana** (linha vermelha, eixo direito) nos oito países europeus com maior número de estabelecimentos registrados.  \"))\n",
+    "display(Markdown(\"A análise mostra que países como **Grécia** e **Portugal** destacam-se com elevadas avaliações médias, enquanto o tempo médio de funcionamento varia significativamente entre os países.\"))\n",
+    "display(Markdown(\"Essa visualização permite observar que **maior tempo de funcionamento não necessariamente implica melhores avaliações**, sugerindo que fatores como qualidade do serviço e tipo de culinária influenciam mais diretamente a satisfação dos clientes.\"))"
    ]
   }
  ],
