--- a/histograma_notas.ipynb
+++ b/histograma_notas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ef4c394c",
    "metadata": {},
    "outputs": [
@@ -17,46 +17,49 @@
      "output_type": "display_data"
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'Markdown' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 38\u001b[39m\n\u001b[32m     35\u001b[39m plt.tight_layout()\n\u001b[32m     36\u001b[39m plt.show()\n\u001b[32m---> \u001b[39m\u001b[32m38\u001b[39m display(\u001b[43mMarkdown\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33mO gráfico de pizza apresenta a distribuição de destinos turísticos na Europa conforme a presença de comidas típicas relacionadas a três categorias populares: pizza, culinária mediterrânea e frutos do mar.  Observa-se que esses tipos de culinária se destacam entre os principais atrativos gastronômicos europeus. Essa visualização reforça a forte influência da gastronomia italiana e mediterrânea sobre a cultura turística do continente.\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m     40\u001b[39m \u001b[38;5;66;03m# Seção: Carga (opcional)\u001b[39;00m\n\u001b[32m     41\u001b[39m \u001b[38;5;66;03m# df_clean[['name','vote_average','vote_count_capped','year']].to_csv('outputs/tvshows_clean_sample.csv', index=False)\u001b[39;00m\n",
-      "\u001b[31mNameError\u001b[39m: name 'Markdown' is not defined"
-     ]
+     "data": {
+      "text/markdown": [
+       "O histograma mostra a frequência das notas médias de avaliação dos restaurantes europeus.  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "A forma da distribuição indica a concentração das notas, revelando se predominam avaliações altas (boa reputação geral) ou se há maior dispersão (diferenças significativas na experiência dos clientes). "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Seção: Extração\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
+    "from IPython.display import display, Markdown\n",
     "\n",
-    "# Leia o arquivo conforme seu nome real\n",
+    "\n",
     "df = pd.read_csv('data/tmdb_popular.csv')\n",
     "\n",
-    "# Inspeção inicial\n",
-    "##display(df.head())\n",
-    "##display(df[['name','first_air_date','popularity','vote_average','vote_count']].info())\n",
-    "##display(df[['popularity','vote_average','vote_count']].describe())\n",
     "\n",
-    "# Seção: Transformação\n",
-    "# Parse de data e criação de ano (para filtros opcionais)\n",
     "df['first_air_date'] = pd.to_datetime(df['first_air_date'], errors='coerce')\n",
     "df['year'] = df['first_air_date'].dt.year\n",
     "\n",
-    "# Limpeza simples: remover linhas sem vote_average/vote_count\n",
+    "\n",
     "df_clean = df.copy()\n",
     "df_clean = df_clean.dropna(subset=['vote_average','vote_count'])\n",
     "\n",
-    "# Opcional: limitar extremos de vote_count para análise de distribuição (winsorize-like)\n",
-    "# Mantém até o percentil 99 para reduzir distorção no histograma\n",
-    "##p99_votes = np.nanpercentile(df_clean['vote_count'], 99)\n",
     "df_clean['vote_count_capped'] = df_clean['vote_count'].clip()\n",
     "\n",
-    "# Seção: Visualização 1 — Histograma de vote_average\n",
+    "\n",
     "plt.figure(figsize=(10,6))\n",
     "plt.hist(df_clean['vote_average'], bins=20, edgecolor='black', color='tab:blue')\n",
     "plt.title('Distribuição de avaliação média (vote_average)')\n",
@@ -66,10 +69,8 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "display(Markdown(\"O gráfico de pizza apresenta a distribuição de destinos turísticos na Europa conforme a presença de comidas típicas relacionadas a três categorias populares: pizza, culinária mediterrânea e frutos do mar.  Observa-se que esses tipos de culinária se destacam entre os principais atrativos gastronômicos europeus. Essa visualização reforça a forte influência da gastronomia italiana e mediterrânea sobre a cultura turística do continente.\"))\n",
-    "\n",
-    "# Seção: Carga (opcional)\n",
-    "# df_clean[['name','vote_average','vote_count_capped','year']].to_csv('outputs/tvshows_clean_sample.csv', index=False)\n"
+    "display(Markdown(\"O histograma mostra a frequência das notas médias de avaliação dos restaurantes europeus.  \"))\n",
+    "display(Markdown(\"A forma da distribuição indica a concentração das notas, revelando se predominam avaliações altas (boa reputação geral) ou se há maior dispersão (diferenças significativas na experiência dos clientes). \"))\n"
    ]
   }
  ],
