--- a/latitude_destinos.ipynb
+++ b/latitude_destinos.ipynb
@@ -14,28 +14,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "af18d8af",
    "metadata": {},
    "outputs": [],
    "source": [
     "caminho = 'data\\\\destinations.csv'\n",
-    "df_tour = pd.read_csv(caminho, sep = ',', encoding = 'ISO-8859-1')\n",
-    "\n"
+    "df_tour = pd.read_csv(caminho, sep = ',', encoding = 'ISO-8859-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "c73693e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "df_tour = df_tour.dropna(subset=['Latitude'])\n",
-    "\n",
-    "# Ordenar pelo valor da latitude (maior = mais ao norte)\n",
-    "df_norte = df_tour.sort_values(by='Latitude', ascending=False).head(8)\n"
+    "df_norte = df_tour.sort_values(by='Latitude', ascending=False).head(8)"
    ]
   },
   {
