--- a/latitude_destinos.ipynb
+++ b/latitude_destinos.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ab5d28f5",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
     "plt.xlabel('Latitude (graus)')\n",
     "plt.ylabel('Destino')\n",
     "plt.title('Os 8 destinos turísticos mais ao norte da Europa')\n",
-    "plt.gca().invert_yaxis()  # inverter para o mais ao norte aparecer no topo\n",
+    "plt.gca().invert_yaxis()  # inversão\n",
     "plt.grid(axis='x', linestyle='--', alpha=0.7)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
